--- a/Views/Home/Cursos.cshtml
+++ b/Views/Home/Cursos.cshtml
@@ -11,16 +11,20 @@
     </script>
 }
 
-<h1 class = "CursosTitulo">Cursos<h1>
+<h1 class = "CursosTitulo">Cursos de tu instrumento<h1>
 <section class = "SeccionCursos">
     @foreach (Curso curso in ViewBag.cursos)
     {
-        <a href='@Url.Action("CursoAdentro", "Home", new { id = curso.IdCurso })' class="curso-link">
+        if (ViewBag.instrumentoUsuario == curso.IdInstrumento)
+        {
+            <a href='@Url.Action("CursoAdentro", "Home", new { id = curso.IdCurso })' class="curso-link">
             <div class="curso-item">
                 <h2>@curso.TituloCurso</h2>
                 <p>@curso.Descripcion</p>
                 <p class="instrumento">Instrumento: @curso.nombreInstrumento</p>
             </div>
         </a>
+        }
+
     }
 </section>
