--- a/Views/Account/SeleccionarInstrumento.cshtml
+++ b/Views/Account/SeleccionarInstrumento.cshtml
@@ -100,7 +100,7 @@
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body text-center">
-        <p>¿Estás seguro de que querés elegir <strong id="nombreInstrumentoModal"></strong>?</p>
+        <p>¿Estás seguro de que querés elegir <strong id="nombreInstrumentoModal"></strong>? Vas a poder cambiarlo cuando quieras</p>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
